--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,12 @@
             <artifactId>selenium-java</artifactId>
             <version>4.15.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+            <version>5.0.1</version>
+            <scope>compile</scope>
+        </dependency>
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
